[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyest"
dynamic = ["version"]
authors = [
    { name = "Keith A. LeGrand" }
]
description = "Adaptive Gaussian Mixture State Estimation"
dependencies = [
    'cvxopt',
    'diskcache',
    'huggingface_hub',
    'jax',
    'numba',
    'numpy',
    'pyarrow',
    'fastparquet',
    'scipy',
    'shapely',
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/scope-lab/pyest"
Issues = "https://github.com/scope-lab/pyest"
Documentation = "https://pyest.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = [
    'dill',
    'pytest-cov',
    'pytest-benchmark',
]
examples = [
    'matplotlib',
    'sympy==1.12',
    'STMint>=1.2.1',
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
